force-app/main/default/objects/bpats__ATS_List_Filter__c/bpats__ATS_List_Filter__c.object-meta.xml
<CustomObject>
    <label>ATS List Filter</label>
    <nameField>
        <label>List Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATS List Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>