force-app/main/default/objects/bpats__ATS_List_Filter__c/fields/bpats__Contact_List__c.field-meta.xml
<CustomField>
    <fullName>bpats__Contact_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact List</label>
    <referenceTo>bpats__Contact_List__c</referenceTo>
    <relationshipLabel>ATS List Filters</relationshipLabel>
    <relationshipName>ATS_List_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>