force-app/main/default/objects/bpats__ATS_List_Filter__c/fields/bpats__Filter_Query__c.field-meta.xml
<CustomField>
    <fullName>bpats__Filter_Query__c</fullName>
    <label>Filter Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>